# Taktix-Engine

./: .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  INSTALL.sh  LICENSE.md  README.md
Application/: main.cpp
CMake/: FindSFML.cmake
Documentation/: .gitignore  Doxyfile
Includes/: .gitignore
Includes/Core/Patterns/: Singleton.hpp  Singleton.inl
Includes/Engine/: TaktixEngine.hpp
Includes/Engine/Managers/: InputManager.hpp  ResourceManager.hpp  ResourceManager.inl
Sources/: .gitignore
Sources/Engine/: TaktixEngine.cpp
Sources/Engine/Managers/: InputManager.cpp  ResourceManager.cpp
Tests/: dummy.xorg.conf
Tests/Minimal_Application/: main.cpp
